tests/rosetta/out/C/24-game.error
cc: exit status 1
/tmp/24-game.c: In function ‘mochi_main’:
/tmp/24-game.c:116:5: warning: ‘return’ with no value, in function returning non-void
  116 |     return;
      |     ^~~~~~
/tmp/24-game.c:93:5: note: declared here
   93 | int mochi_main() {
      |     ^~~~~~~~~~
/tmp/24-game.c:126:9: warning: ‘return’ with no value, in function returning non-void
  126 |         return;
      |         ^~~~~~
/tmp/24-game.c:93:5: note: declared here
   93 | int mochi_main() {
      |     ^~~~~~~~~~
/tmp/24-game.c:133:11: warning: ‘return’ with no value, in function returning non-void
  133 |           return;
      |           ^~~~~~
/tmp/24-game.c:93:5: note: declared here
   93 | int mochi_main() {
      |     ^~~~~~~~~~
/tmp/24-game.c:142:23: warning: implicit declaration of function ‘_float’ [-Wimplicit-function-declaration]
  142 |       tmp10.data[0] = _float(atoi(ch) - atoi("0"));
      |                       ^~~~~~
/usr/bin/ld: /tmp/cchAXX60.o: in function `mochi_main':
24-game.c:(.text+0x911): undefined reference to `_float'
collect2: error: ld returned 1 exit status
