tests/rosetta/out/C/24-game.c
// Generated by Mochi compiler v0.10.30 on 2025-07-19T00:25:01Z
// Generated by Mochi compiler v0.10.30 on 2025-07-19T00:25:01Z
#include <stdio.h>
#include <stdlib.h>
#include <string.h>
#include <time.h>

typedef struct {
  int len;
  int *data;
} list_int;
static list_int list_int_create(int len) {
  list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
static list_int concat_list_int(list_int a, list_int b) {
  list_int r = list_int_create(a.len + b.len);
  for (int i = 0; i < a.len; i++)
    r.data[i] = a.data[i];
  for (int i = 0; i < b.len; i++)
    r.data[a.len + i] = b.data[i];
  return r;
}
static char *concat_string(char *a, char *b) {
  size_t len1 = strlen(a);
  size_t len2 = strlen(b);
  char *buf = (char *)malloc(len1 + len2 + 1);
  memcpy(buf, a, len1);
  memcpy(buf + len1, b, len2);
  buf[len1 + len2] = '\0';
  return buf;
}
static char *_input() {
  char buf[1024];
  if (!fgets(buf, sizeof(buf), stdin))
    return strdup("");
  size_t len = strlen(buf);
  if (len > 0 && buf[len - 1] == '\n')
    buf[len - 1] = '\0';
  return strdup(buf);
}
static char *_str(int v) {
  char *buf = (char *)malloc(32);
  sprintf(buf, "%d", v);
  return buf;
}
static long long _now() {
  struct timespec ts;
  clock_gettime(CLOCK_REALTIME, &ts);
  return (long long)ts.tv_sec * 1000000000LL + ts.tv_nsec;
}
static char *slice_string(char *s, int start, int end) {
  int len = strlen(s);
  if (start < 0)
    start += len;
  if (end < 0)
    end += len;
  if (start < 0)
    start = 0;
  if (end > len)
    end = len;
  if (start > end)
    start = end;
  char *buf = (char *)malloc(end - start + 1);
  memcpy(buf, s + start, end - start);
  buf[end - start] = '\0';
  return buf;
}
static list_int slice_list_int(list_int v, int start, int end) {
  if (start < 0)
    start += v.len;
  if (end < 0)
    end += v.len;
  if (start < 0)
    start = 0;
  if (end > v.len)
    end = v.len;
  if (start > end)
    start = end;
  list_int r = list_int_create(end - start);
  for (int i = 0; i < r.len; i++)
    r.data[i] = v.data[start + i];
  return r;
}
int randDigit() { return (_now() % 9) + 1; }

int mochi_main() {
  list_int digits = list_int_create(0);
  for (int i = 0; i < 4; i++) {
    int tmp1_data[1];
    list_int tmp1 = {1, tmp1_data};
    tmp1.data[0] = randDigit();
    list_int tmp2 = concat_list_int(digits, tmp1);
    digits = tmp2;
  }
  __auto_type numstr = "";
  for (int i = 0; i < 4; i++) {
    char *tmp3 = _str(digits.data[i]);
    char *tmp4 = concat_string(numstr, tmp3);
    numstr = tmp4;
  }
  char *tmp5 = concat_string("Your numbers: ", numstr);
  char *tmp6 = concat_string(tmp5, "\n");
  printf("%s\n", tmp6);
  printf("Enter RPN: \n");
  __auto_type expr = _input();
  if (strlen(expr) != 7) {
    printf("invalid. expression length must be 7. (4 numbers, 3 operators, no "
           "spaces)\n");
    return;
  }
  list_int stack = list_int_create(0);
  __auto_type i = 0;
  __auto_type valid = 1;
  while (i < strlen(expr)) {
    __auto_type ch = slice_string(expr, i, i + 1);
    if ((strcmp(ch, "0") >= 0) && ch <= "9") {
      if ((digits.len == 0)) {
        printf("too many numbers.\n");
        return;
      }
      __auto_type j = 0;
      while ((digits.data[j] != atoi(ch) - atoi("0"))) {
        j = j + 1;
        if ((j == digits.len)) {
          printf("wrong numbers.\n");
          return;
        }
      }
      list_int tmp7 = slice_list_int(digits, 0, j);
      list_int tmp8 = slice_list_int(digits, j + 1, digits.len);
      list_int tmp9 = concat_list_int(tmp7, tmp8);
      digits = tmp9;
      int tmp10_data[1];
      list_int tmp10 = {1, tmp10_data};
      tmp10.data[0] = (double)(atoi(ch) - atoi("0"));
      list_int tmp11 = concat_list_int(stack, tmp10);
      stack = tmp11;
    } else {
      if (stack.len < 2) {
        printf("invalid expression syntax.\n");
        valid = 0;
        break;
      }
      __auto_type b = stack.data[stack.len - 1];
      __auto_type a = stack.data[stack.len - 2];
      if ((strcmp(ch, "+") == 0)) {
        stack.data[stack.len - 2] = a + b;
      } else if ((strcmp(ch, "-") == 0)) {
        stack.data[stack.len - 2] = a - b;
      } else if ((strcmp(ch, "*") == 0)) {
        stack.data[stack.len - 2] = a * b;
      } else if ((strcmp(ch, "/") == 0)) {
        stack.data[stack.len - 2] = ((double)a) / ((double)b);
      } else {
        char *tmp12 = concat_string(ch, " invalid.");
        printf("%s\n", tmp12);
        valid = 0;
        break;
      }
      list_int tmp13 = slice_list_int(stack, 0, stack.len - 1);
      stack = tmp13;
    }
    i = i + 1;
  }
  if (valid) {
    if ((abs(stack.data[0] - 24.0) > 0.000001)) {
      char *tmp14 = _str(stack.data[0]);
      char *tmp15 = concat_string("incorrect. ", tmp14);
      char *tmp16 = concat_string(tmp15, " != 24");
      printf("%s\n", tmp16);
    } else {
      printf("correct.\n");
    }
  }
}

int _mochi_main() {
  mochi_main();
  return 0;
}
int main() { return _mochi_main(); }
